more vm options for jshell